--- a/src/component/css/style.css
+++ b/src/component/css/style.css
@@ -2,21 +2,37 @@
   text-align: center;
 }
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  width: 18%;
-  height: 300px;
-  background-color: darkturquoise;
-  margin-left: 41%;
+  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  position: fixed;
+  padding: 2rem;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  color: #fff;
 }
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.container {
-  padding: 20px 70px;
-}
 .data {
-  padding: 20px 0px;
+  padding: 0.2rem 0px;
+}
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
